--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -77,6 +77,7 @@ Package V2.0
   * [IBD: predictdb eQTL + sQTL VS Munro 6 modalities -- thin method V1](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_predictdb_munro_updated_cs_thin1.html)
   * [IBD: predictdb eQTL + sQTL + Munro rsQTL + apaQTL VS all 8 weights -- thin method V1](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_predictdb_munro_4weights_8weights_update_thin1.html)
   * [IBD, LDL, SBP, WBC: predictdb eQTL / Munro eQTL / predictdb eQTL + sQTL / predictdb eQTL + sQTL + Munro rsQTL + apaQTL / all 8 weights](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_decidingweights_4traits.html) 
+  * [IBD, LDL, SBP, WBC: predictdb eQTL / Munro eQTL / predictdb eQTL + sQTL / predictdb eQTL + sQTL + Munro rsQTL + apaQTL / predictdb eQTL + sQTL + Munro stQTL](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_decidingweights_4traits_ess.html) 
   
   
 # LDL examples
