--- a/analysis/multi_group_compare_decidingweights_4traits_ess.Rmd
+++ b/analysis/multi_group_compare_decidingweights_4traits_ess.Rmd
@@ -147,7 +147,7 @@ plot_3venn <- function(es, esra, ess) {
       n23 = length(intersect(esra, ess)),
       n13 = length(intersect(es, ess)),
       n123 = length(Reduce(intersect, list(es, esra, ess))),
-      category = c("e+s", "e+s+rs+apa", "e+e+st"),
+      category = c("e+s", "e+s+rs+apa", "e+s+st"),
       fill = c("red", "green", "blue"),
       lty = "dashed",
       cex = 2,
@@ -350,11 +350,11 @@ heatmap_data <- rename_heatmap_columns(heatmap_data = heatmap_data, column_order
 p1 <- plot_heatmap(heatmap_data = heatmap_data,main = "PIP partition for the genes reported by e + s + st setting but not by e+s setting")
 
 ###2
-heatmap_data <- combined_sig_4W[!combined_sig_4W$gene_name %in%combined_sig_espred$gene_name, ]
+heatmap_data <- combined_sig_4W[!combined_sig_4W$gene_name %in%combined_sig_ess$gene_name, ]
 column_order <- c("gene_name","combined_pip",
                   "eQTL_pip", "sQTL_pip", "rsQTL_pip","apaQTL_pip")
 heatmap_data <- rename_heatmap_columns(heatmap_data = heatmap_data, column_order = column_order)
-p2 <- plot_heatmap(heatmap_data = heatmap_data,main = "PIP partition for the genes reported by e + s + apa + rs setting but not by e+s setting")
+p2 <- plot_heatmap(heatmap_data = heatmap_data,main = "PIP partition for the genes reported by e + s + apa + rs setting but not by e+s+st setting")
 
 ###3
 heatmap_data <- combined_sig_ess[!combined_sig_ess$gene_name %in%combined_sig_4W$gene_name, ]
@@ -563,11 +563,11 @@ heatmap_data <- rename_heatmap_columns(heatmap_data = heatmap_data, column_order
 p1 <- plot_heatmap(heatmap_data = heatmap_data,main = "PIP partition for the genes reported by e + s + st setting but not by e+s setting")
 
 ###2
-heatmap_data <- combined_sig_4W[!combined_sig_4W$gene_name %in%combined_sig_espred$gene_name, ]
+heatmap_data <- combined_sig_4W[!combined_sig_4W$gene_name %in%combined_sig_ess$gene_name, ]
 column_order <- c("gene_name","combined_pip",
                   "eQTL_pip", "sQTL_pip", "rsQTL_pip","apaQTL_pip")
 heatmap_data <- rename_heatmap_columns(heatmap_data = heatmap_data, column_order = column_order)
-p2 <- plot_heatmap(heatmap_data = heatmap_data,main = "PIP partition for the genes reported by e + s + apa + rs setting but not by e+s setting")
+p2 <- plot_heatmap(heatmap_data = heatmap_data,main = "PIP partition for the genes reported by e + s + apa + rs setting but not by e+s+st setting")
 
 ###3
 heatmap_data <- combined_sig_ess[!combined_sig_ess$gene_name %in%combined_sig_4W$gene_name, ]
@@ -775,11 +775,11 @@ heatmap_data <- rename_heatmap_columns(heatmap_data = heatmap_data, column_order
 p1 <- plot_heatmap(heatmap_data = heatmap_data,main = "PIP partition for the genes reported by e + s + st setting but not by e+s setting")
 
 ###2
-heatmap_data <- combined_sig_4W[!combined_sig_4W$gene_name %in%combined_sig_espred$gene_name, ]
+heatmap_data <- combined_sig_4W[!combined_sig_4W$gene_name %in%combined_sig_ess$gene_name, ]
 column_order <- c("gene_name","combined_pip",
                   "eQTL_pip", "sQTL_pip", "rsQTL_pip","apaQTL_pip")
 heatmap_data <- rename_heatmap_columns(heatmap_data = heatmap_data, column_order = column_order)
-p2 <- plot_heatmap(heatmap_data = heatmap_data,main = "PIP partition for the genes reported by e + s + apa + rs setting but not by e+s setting")
+p2 <- plot_heatmap(heatmap_data = heatmap_data,main = "PIP partition for the genes reported by e + s + apa + rs setting but not by e+s+st setting")
 
 ###3
 heatmap_data <- combined_sig_ess[!combined_sig_ess$gene_name %in%combined_sig_4W$gene_name, ]
@@ -985,11 +985,11 @@ heatmap_data <- rename_heatmap_columns(heatmap_data = heatmap_data, column_order
 p1 <- plot_heatmap(heatmap_data = heatmap_data,main = "PIP partition for the genes reported by e + s + st setting but not by e+s setting")
 
 ###2
-heatmap_data <- combined_sig_4W[!combined_sig_4W$gene_name %in%combined_sig_espred$gene_name, ]
+heatmap_data <- combined_sig_4W[!combined_sig_4W$gene_name %in%combined_sig_ess$gene_name, ]
 column_order <- c("gene_name","combined_pip",
                   "eQTL_pip", "sQTL_pip", "rsQTL_pip","apaQTL_pip")
 heatmap_data <- rename_heatmap_columns(heatmap_data = heatmap_data, column_order = column_order)
-p2 <- plot_heatmap(heatmap_data = heatmap_data,main = "PIP partition for the genes reported by e + s + apa + rs setting but not by e+s setting")
+p2 <- plot_heatmap(heatmap_data = heatmap_data,main = "PIP partition for the genes reported by e + s + apa + rs setting but not by e+s+st setting")
 
 ###3
 heatmap_data <- combined_sig_ess[!combined_sig_ess$gene_name %in%combined_sig_4W$gene_name, ]
