--- a/analysis/LDL_predictdb_esQTL.Rmd
+++ b/analysis/LDL_predictdb_esQTL.Rmd
@@ -344,7 +344,7 @@ make_locusplot(finemap_res = finemap_res,
 - The next track shows the QTLs of the focal gene.
 - The bottom is the gene track.
 
-# Go enrichment analysis
+# Gene set enrichment analysis
 
 We do enrichment analysis using the genes with PIP > 0.8
 
