--- a/analysis/fractional_enrichment_LDL_es.Rmd
+++ b/analysis/fractional_enrichment_LDL_es.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Enrichment analysis using fractional model, LDL, predictdb e+s QTL"
+title: "Enrichment analysis using fractional model"
 author: "XSun"
 date: "2024-10-11"
 output: workflowr::wflow_html
@@ -8,6 +8,11 @@ editor_options:
 ---
 
 # Introduction
+
+PIP ~ gene set membership. Genes outside CS and PIP < 0.1, set PIP = 0.01 (some small non-zero number). 
+
+
+
 
 ```{r}
 
