--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -78,7 +78,7 @@ Package V2.0
   * [IBD: predictdb eQTL + sQTL + Munro rsQTL + apaQTL VS all 8 weights -- thin method V1](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_predictdb_munro_4weights_8weights_update_thin1.html)
   * [IBD, LDL, SBP, WBC: predictdb eQTL / Munro eQTL / predictdb eQTL + sQTL / predictdb eQTL + sQTL + Munro rsQTL + apaQTL / all 8 weights](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_decidingweights_4traits.html) 
   * [IBD, LDL, SBP, WBC: predictdb eQTL / Munro eQTL / predictdb eQTL + sQTL / predictdb eQTL + sQTL + Munro rsQTL + apaQTL / predictdb eQTL + sQTL + Munro stQTL](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_decidingweights_4traits_ess.html) 
-  
+  * [Enrichment analysis using fractional models, for IBD, LDL, SBP, WBC + predictdb eQTL + sQTL /  predictdb eQTL + sQTL + Munro stQTL](https://sq-96.github.io/multigroup_ctwas_analysis/fractional_enrichment.html) 
   
 # LDL examples
 
