--- a/analysis/fractional_enrichment.Rmd
+++ b/analysis/fractional_enrichment.Rmd
@@ -33,6 +33,8 @@ trait <- "LDL-ukb-d-30780_irnt"
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_ess_", trait, "_gobp.rdata"))
 
+sprintf("the number of pathways included: %s", nrow(summary))
+
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -45,7 +47,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 ```{r, echo=T, message=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_ess_", trait, "_gocc.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -59,7 +61,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 ```{r, echo=T, message=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_ess_", trait, "_gomf.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -73,7 +75,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 ```{r, echo=T, message=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_ess_", trait, "_kegg.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -90,7 +92,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 trait <- "IBD-ebi-a-GCST004131"
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_ess_", trait, "_gobp.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -103,7 +105,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 ```{r, echo=T, message=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_ess_", trait, "_gocc.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -117,7 +119,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 ```{r, echo=T, message=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_ess_", trait, "_gomf.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -131,7 +133,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 ```{r, echo=T, message=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_ess_", trait, "_kegg.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -149,7 +151,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 trait <- "SBP-ukb-a-360"
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_ess_", trait, "_gobp.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -162,7 +164,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 ```{r, echo=T, message=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_ess_", trait, "_gocc.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -176,7 +178,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 ```{r, echo=T, message=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_ess_", trait, "_gomf.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -190,7 +192,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 ```{r, echo=T, message=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_ess_", trait, "_kegg.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -207,7 +209,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 trait <- "WBC-ieu-b-30"
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_ess_", trait, "_gobp.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -220,7 +222,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 ```{r, echo=T, message=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_ess_", trait, "_gocc.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -234,7 +236,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 ```{r, echo=T, message=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_ess_", trait, "_gomf.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -248,7 +250,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 ```{r, echo=T, message=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_ess_", trait, "_kegg.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -268,7 +270,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 trait <- "LDL-ukb-d-30780_irnt"
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_espred_", trait, "_gobp.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -281,7 +283,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 ```{r, echo=T, mespredage=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_espred_", trait, "_gocc.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -295,7 +297,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 ```{r, echo=T, mespredage=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_espred_", trait, "_gomf.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -309,7 +311,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 ```{r, echo=T, mespredage=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_espred_", trait, "_kegg.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -326,7 +328,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 trait <- "IBD-ebi-a-GCST004131"
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_espred_", trait, "_gobp.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -339,7 +341,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 ```{r, echo=T, mespredage=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_espred_", trait, "_gocc.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -353,7 +355,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 ```{r, echo=T, mespredage=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_espred_", trait, "_gomf.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -367,7 +369,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 ```{r, echo=T, mespredage=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_espred_", trait, "_kegg.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -385,7 +387,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 trait <- "SBP-ukb-a-360"
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_espred_", trait, "_gobp.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -398,7 +400,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 ```{r, echo=T, mespredage=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_espred_", trait, "_gocc.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -412,7 +414,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 ```{r, echo=T, mespredage=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_espred_", trait, "_gomf.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -426,7 +428,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 ```{r, echo=T, mespredage=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_espred_", trait, "_kegg.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -443,7 +445,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 trait <- "WBC-ieu-b-30"
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_espred_", trait, "_gobp.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -456,7 +458,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 ```{r, echo=T, mespredage=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_espred_", trait, "_gocc.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -470,7 +472,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 ```{r, echo=T, mespredage=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_espred_", trait, "_gomf.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
@@ -484,7 +486,7 @@ DT::datatable(summary,caption = htmltools::tags$caption( style = 'caption-side: 
 ```{r, echo=T, mespredage=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/9.deciding_weights_4traits/postprocess/enrichment_espred_", trait, "_kegg.rdata"))
-
+sprintf("the number of pathways included: %s", nrow(summary))
 summary <- summary[order(summary$fdr, decreasing = F),]
 summary <- summary[1:50,]
 
