--- a/analysis/multi_group_compare_decidingweights_4traits_ess.Rmd
+++ b/analysis/multi_group_compare_decidingweights_4traits_ess.Rmd
@@ -47,8 +47,7 @@ PredictDB (eqtl, sqtl)
 
 - group_prior_var_structure = "shared_type", 
 - filter_L = TRUE,
-- filter_nonSNP_PIP = FALSE,
-- min_nonSNP_PIP = 0.5,
+- filter_nonSNP_PIP = FALSE
 - min_abs_corr = 0.1, 
 
 mem: 100g 10cores
