--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -18,6 +18,10 @@ editor_options:
 # Simulation results
   * [Simulation results](simulation_summary.html)
 
+
+# Methylation analysis results
+  * [Methylation_analysis results](methylation_analysis.html)
+
 # LD mismatch diagnosis
 
   * [LD mismatch diagnosis using SuSiE_RSS](detect_LD_mismatch_gwas_UKBBref_susie_rss.html)
