--- a/analysis/multi_group_6traits_15weights_ess_enrichment.Rmd
+++ b/analysis/multi_group_6traits_15weights_ess_enrichment.Rmd
@@ -14,6 +14,7 @@ We do enrichment analysis for the results here: https://sq-96.github.io/multigro
 
 ## Non-redundant Go terms
 
+- Do enrichment analysis with all the genes with PIP > 0.8, using `enrichR`
 - Rank all GO terms by their significance (p-values). 
 - A term was considered redundant if all the cTWAS genes in that term had already been included in a more significant GO term
 
@@ -50,9 +51,9 @@ Where:
 
 |                  |               | aFib | LDL  | IBD  | SBP  | SCZ  | WBC  |
 |------------------|---------------|------|------|------|------|------|------|
-| Non-redundant Go | gobp          | 18   | 10   | 18   | 1    | 2    | 11   |
-|                  | gocc          | 7    | 14   | 1    | 0    | 0    | 4    |
-|                  | gomf          | 2    | 3    | 3    | 0    | 0    | 0    |
+| Non-redundant Go | gobp - pip0.8 | 18   | 10   | 18   | 1    | 2    | 11   |
+|                  | gocc - pip0.8 | 7    | 14   | 1    | 0    | 0    | 4    |
+|                  | gomf - pip0.8 | 2    | 3    | 3    | 0    | 0    | 0    |
 | Fractional model | gobp          | 5806 | 4497 | 5122 | 3757 | 4291 | 1701 |
 |                  | gocc          | 671  | 582  | 613  | 461  | 506  | 200  |
 |                  | gomf          | 2148 | 1174 | 2144 | 1578 | 1800 | 699  |
@@ -66,61 +67,9 @@ Where:
 
 # Summary of non-redundant GO terms related to trait (summaried by chatgpt)
 
-|      |      | pathway                                                                                | FDR    |
-|------|------|----------------------------------------------------------------------------------------|--------|
-| aFib | gobp | Regulation of cell communication by electrical coupling involved in cardiac conduction | 0.0038 |
-|      |      | Regulation of membrane repolarization                                                  | 0.0038 |
-|      |      | Regulation of cardiac muscle cell action potential                                     | 0.0106 |
-|      |      | Regulation of heart contraction                                                        | 0.0161 |
-|      |      | Regulation of cardiac conduction                                                       | 0.0292 |
-|      | gocc | Sarcolemma                                                                             | 0.0029 |
-|      |      | Cytoskeleton                                                                           | 0.0029 |
-|      |      | Junctional sarcoplasmic reticulum membrane                                             | 0.0096 |
-|      |      | Focal adhesion                                                                         | 0.0096 |
-|      |      | Cell-cell contact zone                                                                 | 0.0104 |
-|      | gomf | Sodium channel regulator activity                                                      | 0.034  |
-|      |      | Adenylate cyclase binding                                                              | 0.034  |
-| LDL  | gobp | Cholesterol transport                                                                  | 0      |
-|      |      | Cholesterol metabolic process                                                          | 0      |
-|      |      | Cholesterol homeostasis                                                                | 0      |
-|      |      | Lipid transport                                                                        | 0.0122 |
-|      |      | negative regulation of receptor-mediated endocytosis                                   | 0.0154 |
-|      | gocc | COPII-coated ER to Golgi transport vesicle                                             | 0      |
-|      |      | Endocytic vesicle                                                                      | 0      |
-|      |      | Lysosome                                                                               | 0.0009 |
-|      |      | High-density lipoprotein particle                                                      | 0.0009 |
-|      |      | Chylomicron                                                                            | 0.0053 |
-|      | gomf | Low-density lipoprotein particle binding                                               | 0.0071 |
-|      |      | Low-density lipoprotein particle receptor binding                                      | 0.0103 |
-| IBD  | gobp | Cytokine-mediated signaling pathway                                                    | 0.0007 |
-|      |      | Positive regulation of cytokine production involved in inflammatory response           | 0.0023 |
-|      |      | Cellular response to cytokine stimulus                                                 | 0.0329 |
-|      |      | Inflammatory response                                                                  | 0.0423 |
-|      |      | Regulation of ERK1 and ERK2 cascade                                                    | 0.0449 |
-|      |      | Regulation of tumor necrosis factor production                                         | 0.0495 |
-|      | gocc | MHC class II protein complex                                                           | 0.0282 |
-|      | gomf | MHC class II receptor activity                                                         | 0.0166 |
-|      |      | CARD domain binding                                                                    | 0.0219 |
-|      |      | Transcription cis-regulatory region binding                                            | 0.0395 |
-| SBP  | gobp | Actomyosin structure organization                                                      | 0.0053 |
-|      | gocc | /                                                                                      | /      |
-|      | gomf | /                                                                                      | /      |
-| SCZ  | gobp | Antigen processing and presentation of peptide antigen via MHC class I                 | 0.02   |
-|      |      | Cellular response to type I interferon                                                 | 0.0195 |
-|      | gocc | /                                                                                      | /      |
-|      | gomf | /                                                                                      | /      |
-| WBC  | gobp | Regulation of mast cell activation involved in immune response                         | 0.0158 |
-|      |      | Antigen processing and presentation of endogenous peptide antigen                      | 0.0158 |
-|      |      | Neutrophil degranulation                                                               | 0.0158 |
-|      |      | Positive regulation of immune effector process                                         | 0.0173 |
-|      |      | Positive regulation of T cell mediated immunity                                        | 0.0263 |
-|      |      | Cytokine-mediated signaling pathway                                                    | 0.0263 |
-|      |      | Regulation of macrophage migration                                                     | 0.0443 |
-|      | gocc | MHC protein complex                                                                    | 0.0011 |
-|      |      | Lysosomal membrane                                                                     | 0.0299 |
-|      |      | Lysosome                                                                               | 0.0327 |
-|      | gomf | /                                                                                      | /      |
-
+```{r, echo=T, message=FALSE, warning=FALSE, fig.width=5, fig.height=5}
+DT::datatable(db_enrichment,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Enrichment results for GO biological process'),options = list(pageLength = 10) )
+```
 
 
 # Summary of GO terms selected by Fisher exact test (PIP > 0.5) (summaried by chatgpt)
@@ -241,7 +190,7 @@ if(file.exists(file)) {
   db_enrichment <- db_enrichment[db_enrichment$Adjusted.P.value < 0.05,]
   
   if(nrow(db_enrichment) > 0) {
-    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Genes")]
+    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Odds.Ratio","Genes")]
     DT::datatable(db_enrichment,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Enrichment results for GO biological process'),options = list(pageLength = 10) )
   }else{
     print("No enriched Go terms")
@@ -265,7 +214,7 @@ if(file.exists(file)) {
   db_enrichment <- db_enrichment[db_enrichment$Adjusted.P.value < 0.05,]
   
   if(nrow(db_enrichment) > 0) {
-    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Genes")]
+    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Odds.Ratio","Genes")]
     DT::datatable(db_enrichment,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Enrichment results for GO biological process'),options = list(pageLength = 10) )
   }else{
     print("No enriched Go terms")
@@ -290,7 +239,7 @@ if(file.exists(file)) {
   db_enrichment <- db_enrichment[db_enrichment$Adjusted.P.value < 0.05,]
   
   if(nrow(db_enrichment) > 0) {
-    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Genes")]
+    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Odds.Ratio","Genes")]
     DT::datatable(db_enrichment,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Enrichment results for GO biological process'),options = list(pageLength = 10) )
   }else{
     print("No enriched Go terms")
@@ -516,7 +465,7 @@ if(file.exists(file)) {
   db_enrichment <- db_enrichment[db_enrichment$Adjusted.P.value < 0.05,]
   
   if(nrow(db_enrichment) > 0) {
-    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Genes")]
+    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Odds.Ratio","Genes")]
     DT::datatable(db_enrichment,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Enrichment results for GO biological process'),options = list(pageLength = 10) )
   }else{
     print("No enriched Go terms")
@@ -540,7 +489,7 @@ if(file.exists(file)) {
   db_enrichment <- db_enrichment[db_enrichment$Adjusted.P.value < 0.05,]
   
   if(nrow(db_enrichment) > 0) {
-    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Genes")]
+    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Odds.Ratio","Genes")]
     DT::datatable(db_enrichment,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Enrichment results for GO biological process'),options = list(pageLength = 10) )
   }else{
     print("No enriched Go terms")
@@ -565,7 +514,7 @@ if(file.exists(file)) {
   db_enrichment <- db_enrichment[db_enrichment$Adjusted.P.value < 0.05,]
   
   if(nrow(db_enrichment) > 0) {
-    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Genes")]
+    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Odds.Ratio","Genes")]
     DT::datatable(db_enrichment,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Enrichment results for GO biological process'),options = list(pageLength = 10) )
   }else{
     print("No enriched Go terms")
@@ -791,7 +740,7 @@ if(file.exists(file)) {
   db_enrichment <- db_enrichment[db_enrichment$Adjusted.P.value < 0.05,]
   
   if(nrow(db_enrichment) > 0) {
-    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Genes")]
+    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Odds.Ratio","Genes")]
     DT::datatable(db_enrichment,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Enrichment results for GO biological process'),options = list(pageLength = 10) )
   }else{
     print("No enriched Go terms")
@@ -815,7 +764,7 @@ if(file.exists(file)) {
   db_enrichment <- db_enrichment[db_enrichment$Adjusted.P.value < 0.05,]
   
   if(nrow(db_enrichment) > 0) {
-    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Genes")]
+    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Odds.Ratio","Genes")]
     DT::datatable(db_enrichment,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Enrichment results for GO biological process'),options = list(pageLength = 10) )
   }else{
     print("No enriched Go terms")
@@ -840,7 +789,7 @@ if(file.exists(file)) {
   db_enrichment <- db_enrichment[db_enrichment$Adjusted.P.value < 0.05,]
   
   if(nrow(db_enrichment) > 0) {
-    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Genes")]
+    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Odds.Ratio","Genes")]
     DT::datatable(db_enrichment,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Enrichment results for GO biological process'),options = list(pageLength = 10) )
   }else{
     print("No enriched Go terms")
@@ -1061,7 +1010,7 @@ if(file.exists(file)) {
   db_enrichment <- db_enrichment[db_enrichment$Adjusted.P.value < 0.05,]
   
   if(nrow(db_enrichment) > 0) {
-    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Genes")]
+    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Odds.Ratio","Genes")]
     DT::datatable(db_enrichment,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Enrichment results for GO biological process'),options = list(pageLength = 10) )
   }else{
     print("No enriched Go terms")
@@ -1085,7 +1034,7 @@ if(file.exists(file)) {
   db_enrichment <- db_enrichment[db_enrichment$Adjusted.P.value < 0.05,]
   
   if(nrow(db_enrichment) > 0) {
-    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Genes")]
+    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Odds.Ratio","Genes")]
     DT::datatable(db_enrichment,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Enrichment results for GO biological process'),options = list(pageLength = 10) )
   }else{
     print("No enriched Go terms")
@@ -1110,7 +1059,7 @@ if(file.exists(file)) {
   db_enrichment <- db_enrichment[db_enrichment$Adjusted.P.value < 0.05,]
   
   if(nrow(db_enrichment) > 0) {
-    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Genes")]
+    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Odds.Ratio","Genes")]
     DT::datatable(db_enrichment,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Enrichment results for GO biological process'),options = list(pageLength = 10) )
   }else{
     print("No enriched Go terms")
@@ -1334,7 +1283,7 @@ if(file.exists(file)) {
   db_enrichment <- db_enrichment[db_enrichment$Adjusted.P.value < 0.05,]
   
   if(nrow(db_enrichment) > 0) {
-    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Genes")]
+    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Odds.Ratio","Genes")]
     DT::datatable(db_enrichment,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Enrichment results for GO biological process'),options = list(pageLength = 10) )
   }else{
     print("No enriched Go terms")
@@ -1358,7 +1307,7 @@ if(file.exists(file)) {
   db_enrichment <- db_enrichment[db_enrichment$Adjusted.P.value < 0.05,]
   
   if(nrow(db_enrichment) > 0) {
-    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Genes")]
+    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Odds.Ratio","Genes")]
     DT::datatable(db_enrichment,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Enrichment results for GO biological process'),options = list(pageLength = 10) )
   }else{
     print("No enriched Go terms")
@@ -1383,7 +1332,7 @@ if(file.exists(file)) {
   db_enrichment <- db_enrichment[db_enrichment$Adjusted.P.value < 0.05,]
   
   if(nrow(db_enrichment) > 0) {
-    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Genes")]
+    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Odds.Ratio","Genes")]
     DT::datatable(db_enrichment,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Enrichment results for GO biological process'),options = list(pageLength = 10) )
   }else{
     print("No enriched Go terms")
@@ -1614,7 +1563,7 @@ if(file.exists(file)) {
   db_enrichment <- db_enrichment[db_enrichment$Adjusted.P.value < 0.05,]
   
   if(nrow(db_enrichment) > 0) {
-    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Genes")]
+    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Odds.Ratio","Genes")]
     DT::datatable(db_enrichment,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Enrichment results for GO biological process'),options = list(pageLength = 10) )
   }else{
     print("No enriched Go terms")
@@ -1638,7 +1587,7 @@ if(file.exists(file)) {
   db_enrichment <- db_enrichment[db_enrichment$Adjusted.P.value < 0.05,]
   
   if(nrow(db_enrichment) > 0) {
-    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Genes")]
+    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Odds.Ratio","Genes")]
     DT::datatable(db_enrichment,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Enrichment results for GO biological process'),options = list(pageLength = 10) )
   }else{
     print("No enriched Go terms")
@@ -1663,7 +1612,7 @@ if(file.exists(file)) {
   db_enrichment <- db_enrichment[db_enrichment$Adjusted.P.value < 0.05,]
   
   if(nrow(db_enrichment) > 0) {
-    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Genes")]
+    db_enrichment <- db_enrichment[,c("Term","Overlap","Adjusted.P.value","Odds.Ratio","Genes")]
     DT::datatable(db_enrichment,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Enrichment results for GO biological process'),options = list(pageLength = 10) )
   }else{
     print("No enriched Go terms")
